# lawyerAgents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  interview_qa.md  pyproject.toml  requirements.txt  run.py  start.bat  start.sh  test_api.http
app/: analysis_chain.py  analysis_graph.py  api.py  article_index.py  article_utils.py  bootstrap.py  case_analysis_store.py  case_loader.py  chat_history.py  chat_history_schema.py  citation_verifier.py  classifier.py  config.py  core.py  document_chain.py  document_generator.py  document_state.py  docx_reader.py  expander.py  graph.py  hybrid_retriever.py  interpretation_library.py  interpretation_searcher.py  interpretation_splitter.py  labor_arbitration.py  labor_case_guard.py  law_registry.py  law_registry.yaml  lightweight_text_splitter.py  llm_factory.py  loader.py  logger.py  memory_compression.py  middleware.py  official_case_loader.py  rag_chain.py  rag_citations.py  rag_context.py  rag_query_expansion.py  rag_retrieval.py  (+9 more)
data/: 中华人民共和国公司法.docx  中华人民共和国刑事诉讼法.docx  中华人民共和国劳动争议调解仲裁法_20071229.docx  中华人民共和国劳动法.docx  中华人民共和国反家庭暴力法.docx
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION.md  FUTURE_PLANS.md  RAG_PIPELINE.md  test_cases.md
eval/: EXPANSION_PLAN.md  README.md  baseline_manifest.json  baseline_report.md  eval_dataset_30.jsonl  questions.jsonl  questions_answer_quality_smoke_8_articles.jsonl  questions_expanded.jsonl  report.md  report_answer_quality.py  report_ragas.py  report_retrieval.py  run_eval.py  run_rag_eval.py  run_ragas_eval.py  (+1 more)
(+161 files in other folders)
